Some more fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,17 +24,12 @@
             {% if count > 0 %}
                 <h2 class="content__row-title">{{ category.title }}</h2>
 
-                {% set include_dict = {'products': products, 'cssClass': 'product-grid--draggable'} %}
-                {% set listCssClass = include_dict.cssClass %}
-                <ul class="product-grid {% if listCssClass %}{{ listCssClass }}{%endif%}">
-                    {% set products = include_dict.products %}
+                <ul class="product-grid product-grid--draggable">
                     {% for product in products %}
                         <li class="product-grid__item">
                             <figure data-href="{{ product.url | relative_url }}" style="background-image:url({{ product.images.default.thumbnail }})" class="product-grid__item-figure js-figure-link">
                                 <figcaption>
-                                    {% set include_dict= {'product': product, 'component': 'product-grid'} %}
-                                    {% set product = include_dict.product %}
-                                    {% set component = include_dict.component %}
+                                    {% set component = 'product-grid' %}
 
                                     <button class="{{ component }}__item-buy button button--icon-only snipcart-add-item"
                                         data-item-name="{{ product.title }}"
