--- a/templates/product_category.html
+++ b/templates/product_category.html
@@ -12,11 +12,60 @@
         </nav>
         
         <section class="store__products">
-            {% set products = getPages('/products') | where('category', page.slug) | sort_array('name', 'asc') %}
-            <ul class="product-grid store__product-grid">
-                {% for product in products %}
+            {% set allProducts = getPages('/products') | where('category', page.slug) | sort_array('name', 'asc') %}
+            {% set allProductsCount = allProducts | length %}
+            {% set allProductsHasAny = true if allProductsCount > 0 else false %}
+            {% if allProductsHasAny %}
+                <ul class="product-grid store__product-grid">
+                    {% for product in allProducts %}
+                        <li class="product-grid__item">
+                            <figure data-href="{{ product.url | relative_url }}" style="background-image:url({{ product.images.default.thumbnail }})" class="product-grid__item-figure js-figure-link">
+                                <figcaption>
+                                    <button class="product-grid__item-buy button button--icon-only snipcart-add-item"
+                                        data-item-name="{{ product.title }}"
+                                        data-item-url="{{ product.url }}"
+                                        data-item-price="{{ product.price }}"
+                                        date-item-categories="{{ product.category }}"
+                                        data-item-image="{{ product.images.default.thumbnail }}"
+                                        data-item-description="{{ product.description }}"
+                                        data-item-id="{{ product.id}}">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M23.2896 4.94327C22.7844 4.81588 22.2535 5.1214 22.1272 5.63093L20.0304 13.9616H7.8562L4.97602 2.16559C4.87538 1.73269 4.49648 1.42717 4.0416 1.42717H0.960093C0.429223 1.42717 0 1.86007 0 2.39549C0 2.93091 0.429223 3.36381 0.960093 3.36381H3.3095L7.19908 19.3624C7.29973 19.7953 7.67862 20.1009 8.13351 20.1009H19.2223C19.7531 20.1009 20.1824 19.668 20.1824 19.1325C20.1824 18.5971 19.7531 18.1642 19.2223 18.1642H8.86555L8.31003 15.8972H20.7378C21.1671 15.8972 21.546 15.5917 21.6723 15.1836L23.9714 6.11341C24.0977 5.60487 23.7947 5.07044 23.2895 4.94306L23.2896 4.94327Z" fill="#88DD9B"/>
+                                            <path d="M11.4678 22.4455C11.4678 23.3034 10.7781 24 9.92751 24C9.07596 24 8.38623 23.3034 8.38623 22.4455C8.38623 21.5877 9.07596 20.891 9.92751 20.891C10.7781 20.891 11.4678 21.5877 11.4678 22.4455Z" fill="#88DD9B"/>
+                                            <path d="M19.4244 22.4455C19.4244 23.3034 18.7346 24 17.8841 24C17.0325 24 16.3428 23.3034 16.3428 22.4455C16.3428 21.5877 17.0325 20.891 17.8841 20.891C18.7346 20.891 19.4244 21.5877 19.4244 22.4455Z" fill="#88DD9B"/>
+                                            <path d="M16.6972 6.11442L14.9793 7.84704V0.96832C14.9793 0.432901 14.5501 0 14.0192 0C13.4884 0 13.0592 0.432901 13.0592 0.96832V7.84704L11.3413 6.11442C11.1646 5.93628 10.912 5.83376 10.6594 5.83376C10.4068 5.83376 10.1799 5.93527 9.9776 6.11442C9.59869 6.49657 9.59869 7.1076 9.9776 7.46489L13.3375 10.8535C13.6907 11.2098 14.3222 11.2098 14.6765 10.8535L18.0363 7.46489C18.4152 7.08274 18.4152 6.4717 18.0363 6.11442C17.6821 5.73227 17.0762 5.73227 16.6973 6.11442H16.6972Z" fill="#88DD9B"/>
+                                        </svg>
+
+                                    </button>
+                                </figcaption>
+                            </figure>
+                            <div class="product-grid__definition">
+                                <a href="{{ product.url | relative_url }}"><h3 class="product-grid__title">{{ product.title }}</h3></a>
+                                <span class="product-grid__category"> {{ product.category }} </span>
+                                <span class="product-grid__price"> ${{ product.price }} </span>
+                            </div>
+                        </li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        </section>
+    </div>
+
+    <section class="content__row">
+        <h2 class="content__row-title content__row-title--dark">
+            <svg width="29" height="25" viewBox="0 0 29 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M28.152 3.4188C27.2129 1.75821 21.3251 -3.80243 14.4999 4.24829C7.33226 -3.80243 1.78532 1.75821 0.847792 3.4188C-0.859337 6.48936 0.164613 11.138 2.55492 13.3791L14.5015 25L26.4482 13.3791C28.8352 11.138 29.8592 6.49096 28.1521 3.4188H28.152Z" fill="#FDFDFD"/>
+            </svg>                    
+            Best Sellers
+        </h2>
+        {% set featuredProducts = getPages('/products') | where('featured', true) %}
+        {% set featuredProductsCount = featuredProducts | length %}
+        {% set featuredProductsHasAny = true if featuredProductsCount > 0 else false %}
+        {% if featuredProductsHasAny %}
+            <ul class="product-grid product-grid--draggable">
+                {% for product in featuredProducts %}
                     <li class="product-grid__item">
-                        <figure data-href="{{ product.url | relative_url }}" style="background-image:url({{ product.images.default.thumbnail }})" class="product-grid__item-figure js-figure-link">
+                        <figure data-href="{{ product.url | relative_url }}" style="background-image:url({{product.images.featured.thumbnail}})" class="product-grid__item-figure product-grid__item-figure--featured js-figure-link">
                             <figcaption>
                                 <button class="product-grid__item-buy button button--icon-only snipcart-add-item"
                                     data-item-name="{{ product.title }}"
@@ -37,55 +86,14 @@
                             </figcaption>
                         </figure>
                         <div class="product-grid__definition">
-                            <a href="{{ product.url | relative_url }}"><h3 class="product-grid__title">{{ product.title }}</h3></a>
+                            <h3 class="product-grid__title"> <a href="{{ product.url | relative_url }}"> {{ product.title }} </a> </h3>
                             <span class="product-grid__category"> {{ product.category }} </span>
                             <span class="product-grid__price"> ${{ product.price }} </span>
                         </div>
                     </li>
                 {% endfor %}
             </ul>
-        </section>
-    </div>
-
-    <section class="content__row">
-        <h2 class="content__row-title content__row-title--dark">
-            <svg width="29" height="25" viewBox="0 0 29 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M28.152 3.4188C27.2129 1.75821 21.3251 -3.80243 14.4999 4.24829C7.33226 -3.80243 1.78532 1.75821 0.847792 3.4188C-0.859337 6.48936 0.164613 11.138 2.55492 13.3791L14.5015 25L26.4482 13.3791C28.8352 11.138 29.8592 6.49096 28.1521 3.4188H28.152Z" fill="#FDFDFD"/>
-            </svg>                    
-            Best Sellers
-        </h2>
-        {% set products = getPages('/products') | where('featured', true) %}
-        <ul class="product-grid product-grid--draggable">
-            {% for product in products %}
-                <li class="product-grid__item">
-                    <figure data-href="{{ product.url | relative_url }}" style="background-image:url({{product.images.featured.thumbnail}})" class="product-grid__item-figure product-grid__item-figure--featured js-figure-link">
-                        <figcaption>
-                            <button class="product-grid__item-buy button button--icon-only snipcart-add-item"
-                                data-item-name="{{ product.title }}"
-                                data-item-url="{{ product.url }}"
-                                data-item-price="{{ product.price }}"
-                                date-item-categories="{{ product.category }}"
-                                data-item-image="{{ product.images.default.thumbnail }}"
-                                data-item-description="{{ product.description }}"
-                                data-item-id="{{ product.id}}">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M23.2896 4.94327C22.7844 4.81588 22.2535 5.1214 22.1272 5.63093L20.0304 13.9616H7.8562L4.97602 2.16559C4.87538 1.73269 4.49648 1.42717 4.0416 1.42717H0.960093C0.429223 1.42717 0 1.86007 0 2.39549C0 2.93091 0.429223 3.36381 0.960093 3.36381H3.3095L7.19908 19.3624C7.29973 19.7953 7.67862 20.1009 8.13351 20.1009H19.2223C19.7531 20.1009 20.1824 19.668 20.1824 19.1325C20.1824 18.5971 19.7531 18.1642 19.2223 18.1642H8.86555L8.31003 15.8972H20.7378C21.1671 15.8972 21.546 15.5917 21.6723 15.1836L23.9714 6.11341C24.0977 5.60487 23.7947 5.07044 23.2895 4.94306L23.2896 4.94327Z" fill="#88DD9B"/>
-                                    <path d="M11.4678 22.4455C11.4678 23.3034 10.7781 24 9.92751 24C9.07596 24 8.38623 23.3034 8.38623 22.4455C8.38623 21.5877 9.07596 20.891 9.92751 20.891C10.7781 20.891 11.4678 21.5877 11.4678 22.4455Z" fill="#88DD9B"/>
-                                    <path d="M19.4244 22.4455C19.4244 23.3034 18.7346 24 17.8841 24C17.0325 24 16.3428 23.3034 16.3428 22.4455C16.3428 21.5877 17.0325 20.891 17.8841 20.891C18.7346 20.891 19.4244 21.5877 19.4244 22.4455Z" fill="#88DD9B"/>
-                                    <path d="M16.6972 6.11442L14.9793 7.84704V0.96832C14.9793 0.432901 14.5501 0 14.0192 0C13.4884 0 13.0592 0.432901 13.0592 0.96832V7.84704L11.3413 6.11442C11.1646 5.93628 10.912 5.83376 10.6594 5.83376C10.4068 5.83376 10.1799 5.93527 9.9776 6.11442C9.59869 6.49657 9.59869 7.1076 9.9776 7.46489L13.3375 10.8535C13.6907 11.2098 14.3222 11.2098 14.6765 10.8535L18.0363 7.46489C18.4152 7.08274 18.4152 6.4717 18.0363 6.11442C17.6821 5.73227 17.0762 5.73227 16.6973 6.11442H16.6972Z" fill="#88DD9B"/>
-                                </svg>
-
-                            </button>
-                        </figcaption>
-                    </figure>
-                    <div class="product-grid__definition">
-                        <h3 class="product-grid__title"> <a href="{{ product.url | relative_url }}"> {{ product.title }} </a> </h3>
-                        <span class="product-grid__category"> {{ product.category }} </span>
-                        <span class="product-grid__price"> ${{ product.price }} </span>
-                    </div>
-                </li>
-            {% endfor %}
-        </ul>
+        {% endif %}
     </section>
 
     {% include "promo_section.html" %}
