Updated include_dict following documentation

--- a/components/featured_products.html
+++ b/components/featured_products.html
@@ -1,11 +1,11 @@
 <ul class="product-grid product-grid--draggable">
-    {% set products = include_dict.products %}
+    {% set products = include_dict.product_pages %}
 
     {% for product in products %}
         <li class="product-grid__item">
             <figure data-href="{{ product.url | relative_url }}" style="background-image:url({{product.images.featured.thumbnail}})" class="product-grid__item-figure product-grid__item-figure--featured js-figure-link">
                 <figcaption>
-                    {% set include_dict= {'product': product, 'component': 'product-grid'} %}
+                    {% set include_dict= {'product_page': product, 'component': 'product-grid'} %}
                     {% include "small_buy_button.html" %}
                 </figcaption>
             </figure>
