--- a/components/product_card.html
+++ b/components/product_card.html
@@ -1,4 +1,4 @@
-{% set product = include_dict.product %}
+{% set product = include_dict.product_page %}
 
 <li class="product__card">
     <figure class="product__card__image">
