--- a/components/small_buy_button.html
+++ b/components/small_buy_button.html
@@ -1,4 +1,4 @@
-{% set product = include_dict.product %}
+{% set product = include_dict.product_page %}
 {% set component = include_dict.component %}
 
 <button class="{{ component }}__item-buy button button--icon-only snipcart-add-item"
