--- a/components/buy_button.html
+++ b/components/buy_button.html
@@ -1,4 +1,4 @@
-{% set product = include_dict.product %}
+{% set product = include_dict.product_page %}
 
 <button class="button button--std snipcart-add-item"
     data-item-name="{{ product.title }}"
