--- a/templates/product.html
+++ b/templates/product.html
@@ -32,7 +32,7 @@
                     {{ page.description }}
                 </article>
 
-                {% set include_dict = {'product_page': page} %}
+                {% set include_dict = {'page': page} %}
                 {% include "buy_button.html" %}
             </div>
         </section>
