--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <section class="content__row">
         {% set categories = getPages('/product_categories') | sort_array('name', 'asc') %}
         {% for category in categories %}
-            {% set products = getPages('/products') | where('category', category.slug) | sort_array('title', 'asc') %}
+            {% set products = getPages('/products') | where('product_category', category.slug) | sort_array('title', 'asc') %}
 
             {% set count = products | length %}
 
