--- a/templates/product.html
+++ b/templates/product.html
@@ -1,6 +1,6 @@
 {% extends "body.html" %}
 {% block content %}
-    {% set category = getPages('/product_categories') | where('slug', page.category) | first %}
+    {% set product_category = getPages('/product_categories') | where('slug', page.category) | first %}
     <main class="content">
         <section class="product content__row content__row--bleed">  
             <div class="product__background-left-overlay"></div>
@@ -22,7 +22,7 @@
                     {{ page.title }}
                 </h1>
                 <h2 class="product__category"> 
-                    <a href="{{ category.url | relative_url }}"> {{ category.title }} </a>
+                    <a href="{{ product_category.url | relative_url }}"> {{ product_category.title }} </a>
                 </h2>
                 <div class="product__price">
                     ${{ page.price }}
@@ -39,7 +39,7 @@
 
         <section class="content__row">
             <h2 class="content__row-title">Related</h2>
-            {% set products = getPages('/products') | where('category', category.slug) | sort_array('title', 'asc') | where('id', '!=', page.id) %}
+            {% set products = getPages('/products') | where('product_category', product_category.slug) | sort_array('title', 'asc') | where('id', '!=', page.id) %}
             {% set include_dict = {'product_pages': products, 'cssClass': 'product-grid--draggable'} %}
             {% include "product_grid.html" %}
         </section>
