Optimzed images to use webp when available

--- a/components/buy_button.html
+++ b/components/buy_button.html
@@ -4,7 +4,7 @@
     data-item-name="{{ product.title }}"
     data-item-url="{{ product.url }}"
     data-item-price="{{ product.price }}"
-    data-item-image="{{ product.images.default.thumbnail }}"
+    data-item-image="{{ product.images.default.thumbnail.fallback }}"
     data-item-description="{{ product.description }}"
     date-item-categories="{{ product.category }}"
     data-item-id="{{ product.id}}">
