--- a/components/post_body.html
+++ b/components/post_body.html
@@ -1,3 +1,3 @@
 <script src="{{ 'js/main.js' | relative_url }}"></script>
-<script src="https://cdn.snipcart.com/themes/v3.0.0-beta.2/default/snipcart.js"></script>
+<script src="https://cdn.snipcart.com/themes/v3.0.0-beta.2/default/snipcart.js" defer></script>
 <div hidden id="snipcart" data-api-key="{{ site.params.snipcart_api_key }}"></div>
