--- a/components/promo_section.html
+++ b/components/promo_section.html
@@ -2,7 +2,9 @@
 
 <section class="content__row content__row--bleed">
     <div class="promo">
-        <img src="{{ promotion.image | relative_url }}" alt="{{ promotion.title }}" class="promo__image">
+        {% set include_dict = {'image': promotion.image, 'alt': promotion.title, 'cssClass': 'promo__image'} %}
+        {% include "picture.html" %}
+
         <div class="promo__message-container">
             <h2 class="promo__title">{{ promotion.title }}</h2>
             <p class="promo__subtitle">{{ promotion.subtitle }}</p>
