--- a/components/small_buy_button.html
+++ b/components/small_buy_button.html
@@ -6,7 +6,7 @@
     data-item-url="{{ product.url }}"
     data-item-price="{{ product.price }}"
     date-item-categories="{{ product.category }}"
-    data-item-image="{{ product.images.default.thumbnail }}"
+    data-item-image="{{ product.images.default.thumbnail.fallback }}"
     data-item-description="{{ product.description }}"
     data-item-id="{{ product.id}}">
     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
