--- a/sass/imports/_hamburger.scss
+++ b/sass/imports/_hamburger.scss
@@ -17,7 +17,12 @@
     height: 100vh;
     width: 100vw;
 
-    background-image: $background_images_secondary;
+    .no-webp & {
+      background-image: $background_images_secondary;
+    }
+    .webp & {
+      background-image: $background_images_secondary_opt;
+    }
     background-size: auto 250%;
     background-position: center;
     transition: left .3s ease-in-out;
