--- a/sass/imports/_product.scss
+++ b/sass/imports/_product.scss
@@ -19,7 +19,12 @@
     &__background-left { 
         grid-column: 1 / 3;
         grid-row: 1 / 4;
-        background-image: $background_images_primary;
+        .no-webp & {
+            background-image: $background_images_primary;
+        }
+        .webp & {
+            background-image: $background_images_primary_opt;
+        }
         background-size: cover;
         @include smaller-than-tablet { 
             grid-column: 1 / 8;
@@ -32,7 +37,12 @@
         grid-column: 3 / 8; 
         grid-row: 1 / 4;
         background-color: $color_default;
-        background-image: $background_images_secondary;
+        .no-webp & {
+            background-image: $background_images_secondary;
+        }
+        .webp & {
+            background-image: $background_images_secondary_opt;
+        }
         background-size: auto 250%;
         background-position: center;
         @include smaller-than-tablet { display: none; }
@@ -153,7 +163,12 @@
         height: 150px;
         color: $color_default;
         background-color: $color_active;
-        background-image: $background_images_product;
+        .no-webp & {
+            background-image: $background_images_product;
+        }
+        .webp & {
+            background-image: $background_images_product_opt;
+        }
         background-size: auto 500%;
         background-position: center;
 
