--- a/sass/imports/_product_grid.scss
+++ b/sass/imports/_product_grid.scss
@@ -35,7 +35,7 @@
         color: $color_dark_grey;
     }
 
-    &__item-figure {
+    &__item-image {
         width: 100%;
         height: 270px;
         background-size: cover;
@@ -45,6 +45,10 @@
         padding: 0;
         cursor: pointer;
         &--featured { box-shadow: 0px 20px 52px rgba(0, 0, 0, 0.31); }
+    }
+
+    &__item-figure {
+        position: relative;
     }
 
     &__item {
